--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -7,3 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+accounts.message=Welcome
+accounts.build.version=v1.2 
