--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -8,4 +8,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 accounts.message=Welcome
-accounts.build.version=v1.2 
+accounts.build-version=v1.2 
