--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -8,4 +8,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+loans.build-version=v1.0
+loans.message=My Loans
+
 server.port=8090
