--- a/cards-dev.properties
+++ b/cards-dev.properties
@@ -1,4 +1,6 @@
-spring.application.name=cards-microservice-dev
+spring.application.name=cards
+cards.message=Cards Micro Service
+cards.build-version=v1.0
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
