--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -7,5 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-accounts.message=Welcome
+accounts.message=Accounts Microservice Message
 accounts.build-version=v1.2 
